# AlgorhytmsAndDataStructures

./: .travis.yml  CMakeLists.txt  README.md
AlgoImpl/: AlgoImpl.cpp  TreesAlgorhytms.cpp  TreesAlgorhytms.h
SrcDataStructurers/: Node.cpp  Node.h  SrcDataStructurers.cpp  TreesGenerator.cpp  TreesGenerator.h
